Remove confidential category test coverage